Bug 327502 use of setenv breaks solaris build r=benjamin sr=neil